se agreggo nuevas funcionalidades